# GesFer.Admin.Front

./: .gitignore  AGENTS.md  AGENTS.norms.md  README.md  finalize.md  patch.js  patch_edit.diff  patch_edit_page.txt  patch_new.diff  patch_page.diff
.cursor/rules/: action-suggestions.mdc  commands-via-skills-tools.mdc  process-suggestions.mdc  sddia-evolution-sync.mdc  sddia-ssot.mdc  skill-suggestions.mdc  subir-push.mdc
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: pr-validation.yml
SddIA/: CONSTITUTION.md  constitution.json
SddIA/actions/: README.md  actions-contract.json
SddIA/agents/: cumulo.json  cumulo.paths.json
SddIA/evolution/: 3275d2e5-14bf-4f67-803f-be9fc9573421.md  43bfc7bd-b70d-43bc-8639-caf7af449079.md  (+4 more)
scripts/: README-E2E.md  validate-nomenclatura.ps1
scripts/skills-rs/: Cargo.toml  install.ps1
scripts/skills-rs/docs/diagnostics/feat/correccion-auditoria-2026-05-17/: execution_history.json
scripts/skills-rs/docs/diagnostics/feat/kaizen-npm-audit-17913973750748420498/: execution_history.json
scripts/skills-rs/docs/diagnostics/feat/test-cn-utility-1747190362919799202/: execution_history.json
scripts/skills-rs/docs/diagnostics/jules-15715494510850687731-f5ce3e70/: execution_history.json
scripts/skills-rs/docs/diagnostics/main/: execution_history.json
scripts/skills-rs/src/: capsule_json.rs  evolution.rs  git_cmd.rs  lib.rs
src/: .env.example  Dockerfile  README.md  auth.ts  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
(+1174 files in other folders)
